src/main/java/org/example/bank/_core/errors/exceptions/Exception401.java
package org.example.bank._core.errors.exceptions;

public class Exception401 extends RuntimeException{

    public Exception401(String msg) {
        super(msg);
    }
}